# pcilibs-rs

./: Cargo.toml  README.md  deny.toml
.github/: dependabot.yml
.github/workflows/: actionlint.yml  ci.yml  osv-scanner.yml  release.yml  zizmor.yml
src/: iommufd.rs  lib.rs  pci_manager.rs
