[package]
name = "pcilibs-rs"
version = "0.1.0"
description = "PCI device enumeration and diagnostics for Linux container runtimes"
keywords = ["kata", "container", "pci", "vfio"]
authors = ["The Kata Containers community <kata-dev@lists.katacontainers.io>"]
repository = "https://github.com/kata-containers/pcilibs-rs.git"
homepage = "https://katacontainers.io/"
readme = "README.md"
license = "Apache-2.0"
edition = "2018"

[dependencies]
nix = { version = "0.29.0", default-features = false, features = ["fs"] }
pci-ids = "0.2.6"

[dev-dependencies]
tempfile = "3.19.1"
